# grpc-xnet-socket-examples

./: README.md  generatestubs.py  lint.py  pyproject.toml
.github/workflows/: ci.yml
client/: __init__.py  _shared.py  loopback.py  udp.py
proto/: nixnet.proto
xnetgrpc/: nixnetsocket_pb2.py  nixnetsocket_pb2.pyi  nixnetsocket_pb2_grpc.py  nixnetsocket_pb2_grpc.pyi  session_pb2.py  session_pb2.pyi  session_pb2_grpc.py  session_pb2_grpc.pyi
